update week 6, add assignments

--- a/modules/module-1.1.qmd
+++ b/modules/module-1.1.qmd
@@ -1,6 +1,6 @@
 ---
 title: "Module 1.1"
-subtitle: "Working With Flat Files"
+subtitle: "Working with Flat Files"
 format: html
 highlight-style: atom-one
 execute: 
